feature: added GET agents/evaluated endpoint
